--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -6,8 +6,8 @@
     <title>Home</title>
     <link rel="stylesheet" href="../output.css">
 </head>
-<body class="bg-gray-50">
-    <div class="">
+<body class="bg-gray-50 text-gray-600">
+    <div>
         <!-- header -->
         <div class="container mx-auto p-4 h-24 flex items-center">
             <div class="font-black">
@@ -15,20 +15,21 @@
             </div>
             <ul class="ml-auto flex items-center space-x-4">
                 <li>
-                    <a href="#" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Book</a>
+                    <a href="#" class="text-sm hover:text-gray-800 hover:underline">Book</a>
                 </li>
                 <li>
-                    <a href="#" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">About us</a>
+                    <a href="#" class="text-sm hover:text-gray-800 hover:underline">About us</a>
                 </li>
                 <li>
-                    <a href="#" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Infos</a>
+                    <a href="#" class="text-sm hover:text-gray-800 hover:underline">Infos</a>
                 </li>
                 <li>
-                    <a href="#" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Contact</a>
+                    <a href="#" class="text-sm hover:text-gray-800 hover:underline">Contact</a>
                 </li>
             </ul>
         </div>
         <!-- /header -->
+
         <!-- banner -->
         <div style="background: url(../img/hero-image-1.png); height: 450px; background-size: cover; background-position: center;">
             <div class="container mx-auto p-4 flex items-center justify-center h-full">
@@ -45,7 +46,7 @@
                             <select name="city" id="city" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded-md text-gray-500">
                                 <option value="#">Select your city</option>
                             </select>
-                            <button class="text-yellow-800 bg-yellow-500 font-medium px-3 py-2 rounded-md inline-flex items-center">
+                            <button class="text-yellow-800 bg-yellow-500 font-medium px-3 py-2 rounded-md inline-flex items-center cursor-pointer">
                                 <svg class="w-4 h-4 mr-2" data-slot="icon" aria-hidden="true" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                     <path d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" stroke-linecap="round" stroke-linejoin="round"></path>
                                 </svg>
@@ -57,7 +58,47 @@
             </div>
         </div>
         <!-- /banner -->
+
+        <!-- featured resort -->
+        <div>
+            <div class="container mx-auto px-4 py-10">
+                <div class="flex">
+                    <div class="pr-10">
+                        <div class="text-sm text-gray-400 font-medium">HIGHLIGHT RESORT</div>
+                        <div class="text-3xl">Ecoresort Beach "Forte" Bahia - Brazil</div>
+                        <div class="text-sm text-gray-400 font-medium mt-2">Five Stars Hotel</div>
+                        <div class="text-sm text-gray-400 font-medium mt-4 space-y-2">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing eli1t. 
+                                Ut accusamus rerum ipsum reprehenderit inventore ex laborum asperiores reiciendis fugiat et?
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing eli1t. 
+                                Ut accusamus rerum ipsum reprehenderit inventore ex laborum asperiores reiciendis fugiat et?
+                            </p>
+                        </div>
+                        <div class="mt-4">
+                            <a href="#" class="text-yellow-800 bg-yellow-500 font-medium px-3 py-2 rounded-md inline-flex items-center cursor-pointer">
+                                Reserve Now
+                                <svg class="w-4 h-4 ml-2" data-slot="icon" aria-hidden="true" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m8.25 4.5 7.5 7.5-7.5 7.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 ml-auto">
+                        <img class="w-2xl" src="../img/featured-img.png" alt="Beach Resort">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /featured resort -->
         
+        <!-- resorts grid -->
+        <div>
+            
+        </div>
+        <!-- /resorts grid -->
     </div>
 </body>
 </html>
