Adicionando Grid de Hoteis
Adicionando o grid estilizado de hotéis na pagina html.

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-50 text-gray-600">
     <div>
         <!-- header -->
-        <div class="container mx-auto p-4 h-24 flex items-center">
+        <div class="container max-w-5xl mx-auto p-4 h-24 flex items-center">
             <div class="font-black">
                 LOGO 
             </div>
@@ -32,7 +32,7 @@
 
         <!-- banner -->
         <div style="background: url(../img/hero-image-1.png); height: 450px; background-size: cover; background-position: center;">
-            <div class="container mx-auto p-4 flex items-center justify-center h-full">
+            <div class="container max-w-5xl mx-auto p-4 flex items-center justify-center h-full">
                 <div>
                     <div class="text-center">
                         <h1 class="text-gray-50 text-4xl">Where do you want to go?</h1>
@@ -61,7 +61,7 @@
 
         <!-- featured resort -->
         <div>
-            <div class="container mx-auto px-4 py-10">
+            <div class="container max-w-5xl mx-auto px-4 py-10">
                 <div class="flex">
                     <div class="pr-10">
                         <div class="text-sm text-gray-400 font-medium">HIGHLIGHT RESORT</div>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="flex-shrink-0 ml-auto">
-                        <img class="w-2xl" src="../img/featured-img.png" alt="Beach Resort">
+                        <img class="w-lg rounded-md" src="../img/featured-img.png" alt="Beach Resort">
                     </div>
                 </div>
             </div>
@@ -95,62 +95,10 @@
         <!-- /featured resort -->
         
         <!-- resorts grid -->
-        <div class="container mx-auto px-4">
-          <div>
-            <h3 class="text-2xl text-gray-500 font-semibold text-center mb-8">Find more resorts!</h3>
-            <div class="grid grid-cols-4 grid-rows-2 gap-6 h-96">
-              <div class="relative col-span-2 row-span-2">
-                <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">
-                  Beach Park Resort
-                </div>
-                <img src="../img/image-shadow.png" alt="shadow" class="absolute bottom-0 left-0 right-0 h-20 z-10">
-                <img src="../img/hotels/hotel-1.jpeg" alt="hotel-1" class="h-full w-full object-cover rounded-md overflow-hidden">
-              </div>
-              <div class="col-span-2 relative">
-                <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">
-                  Salinas do Maragodi Resort
-                </div>
-                <img src="../img/image-shadow.png" alt="shadow" class="absolute bottom-0 left-0 right-0 h-20 z-10">
-                <img src="../img/hotels/hotel-2.jpeg" alt="hotel-2" class="h-full w-full object-cover rounded-md overflow-hidden">
-              </div>
-              <div class="relative">
-                <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">
-                  Grand Paladium
-                </div>
-                <img src="../img/image-shadow.png" alt="shadow" class="absolute bottom-0 left-0 right-0 h-20 z-10">
-                <img src="../img/hotels/hotel-3.jpeg" alt="hotel-3" class="h-full w-full object-cover rounded-md overflow-hidden">
-              </div>
-              <div class="relative">
-                <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">
-                  Arraial d'a Ajuda Eco Resort
-                </div>
-                <img src="../img/image-shadow.png" alt="shadow" class="absolute bottom-0 left-0 right-0 h-20 z-10">
-                <img src="../img/hotels/hotel-4.jpeg" alt="hotel-4" class="h-full w-full object-cover rounded-md overflow-hidden">
-              </div>
-            </div>
-          </div>
+        <div>
+            
         </div>
         <!-- /resorts grid -->
-        <!-- form search -->
-        <div>
-          <div class="container mx-auto px-4">
-            <form action="#" class="space-x-4">
-              <select name="state" id="state" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded-md text-gray-500">
-                  <option value="#">Select your state</option>
-              </select>
-              <select name="city" id="city" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded-md text-gray-500">
-                  <option value="#">Select your city</option>
-              </select>
-              <button class="text-yellow-800 bg-yellow-500 font-medium px-3 py-2 rounded-md inline-flex items-center cursor-pointer">
-                  <svg class="w-4 h-4 mr-2" data-slot="icon" aria-hidden="true" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg>
-                  Search Resorts
-              </button>
-            </form>
-          </div>
-        </div>
-        <!-- /form search -->
     </div>
 </body>
 </html>
